# elasticsearch-fullstack-async

./: .env  .env.local  .env.test  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile-test  README.md  pyproject.toml
backend/app/: main.py  schemas.py  search.py  utils.py
backend/scripts/: check.sh  format.sh  lint.sh
backend/tests/: test_main.py
data/: import.csv
frontend/: Dockerfile  README.md  biome.json  index.html  nginx.conf  package-lock.json  package.json  setupTest.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
frontend/src/components/: burger-menu.tsx  default-error-box.tsx  filter.tsx  logo.tsx  main-nav.tsx  mobile-nav.tsx
frontend/src/components/politicians/: actions.tsx  columns.tsx  data-table-pagination.tsx  data-table.tsx  empty-results.tsx  gender-filter.tsx
frontend/src/components/politicians-data-table/: columns.tsx  data-table-pagination.tsx  data-table.tsx  empty-results.tsx  gender-filter.tsx
frontend/src/components/politicians-data-table/__mocks__/: politicians.mock.ts
frontend/src/components/politicians-data-table/__tests__/: politicians-data-table.test.tsx
frontend/src/components/politicians-data-table/actions/: actions.tsx  edit.tsx
frontend/src/components/statistics-card/: statistics-card.test.tsx  statistics-card.tsx
frontend/src/components/ui/: combo-box.tsx  command.tsx
frontend/src/hooks/: use-debounce-callback.ts
frontend/src/react-query/: politicians-query.ts
frontend/src/routes/: __root.tsx  index.lazy.tsx  politicians.lazy.tsx  politicians.tsx  statistics.lazy.tsx
frontend/src/services/: politicians-service.ts  politiciansService.ts
frontend/src/types/: politicians.ts
frontend/src/utils/: currency.ts
frontend/src/utils/__tests__/: currency.test.ts
(+3 files in other folders)
