[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Javier Muñoz Tous <javimtib92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
elasticsearch = "^8.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
